<!--
  ~  Copyright 2019 Dmitriy Ponomarenko
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
	<string name="app_name">Good Weather</string>

	<string name="wind">Wind:</string>
	<string name="humidity">Humidity:</string>
	<string name="temperature">Temperature:</string>
	<string name="pressure">Pressure:</string>
	<string name="time_format">Time format:</string>
	<string name="wind_val">%d m/sec</string>
	<string name="humidity_val">%d %%</string>
	<string name="pressure_val">%d hPa</string>

	<string name="tittle_settings">Settings</string>
	<string name="tittle_today">Today</string>
	<string name="tittle_two_weeks">Two weeks</string>
	<string name="open_source_licences">Open source licences</string>

	<string name="metrics">Metrics</string>

	<string name="btn_ok">OK</string>
	<string name="btn_next">Next</string>
	<string name="btn_apply">Apply</string>
	<string name="btn_start">Start</string>
	<string name="btn_locate">Locate</string>
	<string name="btn_settings">Settings</string>

	<string name="temp_celsius">°C</string>
	<string name="temp_fahrenheit">°F</string>
	<string name="wind_km_hour">km/h</string>
	<string name="wind_meter_sec">m/s</string>
	<string name="wind_miles_hour">mph</string>
	<string name="pressure_pha">pHa</string>
	<string name="pressure_mm_hg">mmHg</string>
	<string name="time_format_24h">24H</string>
	<string name="time_format_12h">12H</string>
	<string name="humidity_present">%</string>

	<string name="select_location">Select location</string>
	<string name="weather_image">Weather image</string>

	<string name="location">Location</string>

	<string name="request">Request or feedback</string>
	<string name="rate_app">Rate app</string>
	<string name="email_clients_not_found">Not found any Email client</string>
	<string name="send_email">Send by email&#8230;</string>

	<!-- Shown in the 'About' window of the app. -->
	<string name="about_body"><![CDATA[
    	<b>Good Weather 2019</b><br>
		Version %s
	]]></string>

	<string name="licences_description">This application makes use of the following third party libraries.</string>

</resources>
