<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2019 Dmitriy Ponomarenko
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

	<ImageView
			android:id="@+id/welcomeIcon"
			android:layout_width="140dp"
			android:layout_height="140dp"
			android:layout_gravity="center"
			android:contentDescription="@null"
			android:src="@drawable/weather_loadscreen"
			app:layout_constraintBottom_toTopOf="@+id/welcomeLabel"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="packed"/>

	<TextView
			android:id="@+id/welcomeLabel"
			style="@style/Text.SectionLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/metrics"
			android:layout_margin="@dimen/spacing_double"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/welcomeIcon"
			app:layout_constraintBottom_toTopOf="@+id/txtWind"
			/>

	<TextView
			android:id="@+id/windLabel"
			style="@style/Text.NormalLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/wind"
			android:layout_marginStart="@dimen/spacing_double"
			android:layout_marginEnd="@dimen/spacing_double"
			android:layout_marginLeft="@dimen/spacing_double"
			android:layout_marginRight="@dimen/spacing_double"
			android:layout_marginBottom="@dimen/spacing_double"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBaseline_toBaselineOf="@id/txtWind"
			/>

	<TextView
			android:id="@+id/tempFormatLabel"
			style="@style/Text.NormalLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/temperature"
			android:layout_marginStart="@dimen/spacing_double"
			android:layout_marginEnd="@dimen/spacing_double"
			android:layout_marginLeft="@dimen/spacing_double"
			android:layout_marginRight="@dimen/spacing_double"
			android:layout_marginBottom="@dimen/spacing_double"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBaseline_toBaselineOf="@id/txtTempFormat"
			/>

	<TextView
			android:id="@+id/pressureLabel"
			style="@style/Text.NormalLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pressure"
			android:layout_marginStart="@dimen/spacing_double"
			android:layout_marginEnd="@dimen/spacing_double"
			android:layout_marginLeft="@dimen/spacing_double"
			android:layout_marginRight="@dimen/spacing_double"
			android:layout_marginBottom="@dimen/spacing_double"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBaseline_toBaselineOf="@id/txtPressure"
			/>

	<TextView
			android:id="@+id/timeFormatLabel"
			style="@style/Text.NormalLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/time_format"
			android:layout_marginStart="@dimen/spacing_double"
			android:layout_marginEnd="@dimen/spacing_double"
			android:layout_marginLeft="@dimen/spacing_double"
			android:layout_marginRight="@dimen/spacing_double"
			android:layout_marginBottom="@dimen/spacing_double"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBaseline_toBaselineOf="@id/txtTimeFormat"
			/>

	<TextView
			android:id="@+id/txtWind"
			style="@style/Text.NormalValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:layout_marginStart="@dimen/spacing_double"
			android:layout_marginEnd="@dimen/spacing_double"
			android:layout_marginLeft="@dimen/spacing_double"
			android:layout_marginRight="@dimen/spacing_double"
			android:clickable="true"
			android:focusable="true"
			android:padding="@dimen/spacing_small"
			android:drawableEnd="@drawable/chevron_down"
			android:drawableRight="@drawable/chevron_down"
			android:drawablePadding="@dimen/spacing_normal"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@id/txtTempFormat"
			app:layout_constraintTop_toBottomOf="@+id/welcomeLabel"
			tools:text="m/s"
			/>

	<TextView
			android:id="@+id/txtTempFormat"
			style="@style/Text.NormalValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:layout_marginStart="@dimen/spacing_double"
			android:layout_marginEnd="@dimen/spacing_double"
			android:layout_marginLeft="@dimen/spacing_double"
			android:layout_marginRight="@dimen/spacing_double"
			android:clickable="true"
			android:focusable="true"
			android:padding="@dimen/spacing_small"
			android:drawableEnd="@drawable/chevron_down"
			android:drawableRight="@drawable/chevron_down"
			android:drawablePadding="@dimen/spacing_normal"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@id/txtPressure"
			app:layout_constraintTop_toBottomOf="@+id/txtWind"
			tools:text="%"
			/>

	<TextView
			android:id="@+id/txtPressure"
			style="@style/Text.NormalValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:layout_marginStart="@dimen/spacing_double"
			android:layout_marginEnd="@dimen/spacing_double"
			android:layout_marginLeft="@dimen/spacing_double"
			android:layout_marginRight="@dimen/spacing_double"
			android:clickable="true"
			android:focusable="true"
			android:padding="@dimen/spacing_small"
			android:drawableEnd="@drawable/chevron_down"
			android:drawableRight="@drawable/chevron_down"
			android:drawablePadding="@dimen/spacing_normal"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/txtTimeFormat"
			app:layout_constraintTop_toBottomOf="@+id/txtTempFormat"
			tools:text="hPa"
			/>

	<TextView
			android:id="@+id/txtTimeFormat"
			style="@style/Text.NormalValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:layout_marginStart="@dimen/spacing_double"
			android:layout_marginEnd="@dimen/spacing_double"
			android:layout_marginLeft="@dimen/spacing_double"
			android:layout_marginRight="@dimen/spacing_double"
			android:clickable="true"
			android:focusable="true"
			android:padding="@dimen/spacing_small"
			android:drawableEnd="@drawable/chevron_down"
			android:drawableRight="@drawable/chevron_down"
			android:drawablePadding="@dimen/spacing_normal"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/btnApply"
			app:layout_constraintTop_toBottomOf="@+id/txtPressure"
			tools:text="24H"
			/>

	<Button
			android:id="@+id/btnApply"
			style="@style/Button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:contentDescription="@null"
			android:text="@string/btn_apply"
			android:padding="@dimen/spacing_normal"
			android:background="?android:attr/selectableItemBackground"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			/>

</android.support.constraint.ConstraintLayout>
