<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2019 Dmitriy Ponomarenko
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		tools:context="com.dimowner.goodweather.app.location.LocationActivity">

	<com.google.android.gms.maps.MapView
			android:id="@+id/mapView"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginBottom="@dimen/spacing_normal"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/pnlLocation"
			/>

	<ListView
			android:id="@+id/list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/primary_transparent"
			android:layout_marginBottom="@dimen/toolbar_height"
			app:layout_constraintBottom_toTopOf="@+id/pnlLocation"
			/>

	<androidx.coordinatorlayout.widget.CoordinatorLayout
			android:id="@+id/coordinator_layout_session_detail"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/pnlLocation"
			tools:ignore="MergeRootFrame">

		<com.google.android.material.floatingactionbutton.FloatingActionButton
				android:id="@+id/fab"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_anchor="@id/session_detail_bottom_app_bar"
				app:srcCompat="@drawable/ic_map_marker"
				app:fabSize="normal"
				tools:visibility="visible"/>

		<com.google.android.material.bottomappbar.BottomAppBar
				android:id="@+id/session_detail_bottom_app_bar"
				android:layout_width="match_parent"
				android:layout_height="?actionBarSize"
				android:layout_gravity="bottom"
				android:elevation="6dp"
				app:backgroundTint="@color/colorPrimaryDark"
				app:contentInsetStart="@dimen/spacing_normal"
				app:fabAlignmentMode="end" >

			<TextView
					style="@style/Text.SectionLabel"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_double"
					android:layout_marginEnd="@dimen/spacing_double"
					android:text="@string/select_location"
					/>

		</com.google.android.material.bottomappbar.BottomAppBar>

	</androidx.coordinatorlayout.widget.CoordinatorLayout>

	<LinearLayout
			android:id="@+id/pnlLocation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimaryDark"
			app:layout_constraintBottom_toBottomOf="parent"
			android:orientation="vertical">

		<EditText
				android:id="@+id/inputCity"
				style="@style/Text.Input"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_double"
				android:layout_marginEnd="@dimen/spacing_double"
				android:hint="@string/location"
				android:inputType="text"/>

		<Button
				android:id="@+id/btnApply"
				style="@style/Button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:contentDescription="@null"
				android:text="@string/btn_start"
				android:padding="@dimen/spacing_normal"
				android:background="?android:attr/selectableItemBackgroundBorderless"
				/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
